[package]
name = "ros2_go2_video"
version = "0.0.1"
authors = ["Tamas Foldi <tfoldi@xsi.hu>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.8.4"
futures = "0.3.15"
video-rs = { version = "0.6", features = ["ndarray"] }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1"
dotenv = "0.15.0"
ndarray = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
go2webrtc-rs = { path = "./go2webrtc-rs" }