<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_go2_video</name>
  <version>0.0.1</version>
  <description>Unitree Go2 Video/Camera stream publisher</description>
  <maintainer email="tfoldi@xsi.hu">Tamas Foldi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>ffmpeg-dev</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ffmpeg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
